--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <h1>Odin Recipes</h1>
         <ul>
             <li><a href="recipes/lasagna.html">Lasagna Recipe</a></li>
+            <li><a href="recipes/eggs-ham.html">Eggs and Ham Recipe</a></li>
         </ul>
 
     </body>
