--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <ul>
             <li><a href="recipes/lasagna.html">Lasagna Recipe</a></li>
             <li><a href="recipes/eggs-ham.html">Eggs and Ham Recipe</a></li>
+            <li><a href="recipes/creatine.html">Creatine Recipe</a></li>
         </ul>
 
     </body>
